@@ -1,5 +1,5 @@
-# counttest.jbs 2011-01-03 j.m.reneau
-# for version 0.9.6.55
+# counttest.jbs 2011-01-05 j.m.reneau
+# for version 0.9.6.56
 
 a$ = "We all live in a yellow submarine, yellow submarine, yellow, submarine."
 
@@ -8,3 +8,5 @@ print "count of w = " + count(a$,"w")
 print "count of W = " + count(a$,"W")
 print "count of YeLlOw (ignore case) = " + count(a$,"YeLlOw",true)
 print "count of W (ignore case) = " + count(a$,"W",true)
+print "count of regex [Ww] = " + countx(a$,"[Ww]")
+
