@@ -1,5 +1,5 @@
-# explodetest.jbs 2011-01-03 j.m.reneau
-# for version 0.9.6.55
+# explodetest.jbs 2011-01-05 j.m.reneau
+# for version 0.9.6.56
 
 # explode on spaces
 a$ = "We all live in a yellow submarine, yellow submarine, yellow, submarine."
@@ -11,6 +11,13 @@ next t
 # explode on A or a
 a$ = "klj;lkjalkjAlkj;al;kjAoiupAoiupouApoiupoiapoiupoaoiupoaoiupoaaaoiuAAAoiu"
 w$ = explode(a$,"A",true)
+for t = 0 to w$[?]-1
+   print "w$["+t+"]=" + w$[t]
+next t
+
+# explode on regex //[,]* //
+a$ = "We all live in a yellow submarine, yellow submarine, yellow, submarine."
+w$ = explodex(a$,"[,]* ")
 for t = 0 to w$[?]-1
    print "w$["+t+"]=" + w$[t]
 next t
@@ -28,5 +35,13 @@ n = explode(a$,"and",true)
 for t = 0 to n[?]-1
    print "n["+t+"]=" + n[t]
 next t
+
+# explode on regex //[Aa][Nn][Dd]//
+a$="1 and 2 AND 3 and 5 aND 99 AND 8.88 aNd 6.45"
+n = explodex(a$,"[Aa][Nn][Dd]")
+for t = 0 to n[?]-1
+   print "n["+t+"]=" + n[t]
+next t
+
 
 
